--- a/normalize.css
+++ b/normalize.css
@@ -10,7 +10,7 @@
 
  html {
     line-height: 1.15; /* 1 */
-    -webkit-text-size-adjust: 100%; /* 2 */
+    -webkit-text-size-adjust: 100 %; /* 2 */
   }
   
   /* Sections
@@ -38,8 +38,8 @@
    */
   
   h1 {
-    font-size: 2em;
-    margin: 0.67em 0;
+    font-size: 2 em;
+    margin: 0.67 em 0;
   }
   
   /* Grouping content
@@ -63,7 +63,7 @@
   
   pre {
     font-family: monospace, monospace; /* 1 */
-    font-size: 1em; /* 2 */
+    font-size: 1 em; /* 2 */
   }
   
   /* Text-level semantics
@@ -106,7 +106,7 @@
   kbd,
   samp {
     font-family: monospace, monospace; /* 1 */
-    font-size: 1em; /* 2 */
+    font-size: 1 em; /* 2 */
   }
   
   /**
@@ -114,7 +114,7 @@
    */
   
   small {
-    font-size: 80%;
+    font-size: 80 %;
   }
   
   /**
@@ -124,18 +124,18 @@
   
   sub,
   sup {
-    font-size: 75%;
+    font-size: 75 %;
     line-height: 0;
     position: relative;
     vertical-align: baseline;
   }
   
   sub {
-    bottom: -0.25em;
+    bottom: -0.25 em;
   }
   
   sup {
-    top: -0.5em;
+    top: -0.5 em;
   }
   
   /* Embedded content
@@ -163,7 +163,7 @@
   select,
   textarea {
     font-family: inherit; /* 1 */
-    font-size: 100%; /* 1 */
+    font-size: 100 %; /* 1 */
     line-height: 1.15; /* 1 */
     margin: 0; /* 2 */
   }
@@ -219,7 +219,7 @@
   [type="button"]:-moz-focusring,
   [type="reset"]:-moz-focusring,
   [type="submit"]:-moz-focusring {
-    outline: 1px dotted ButtonText;
+    outline: 1 px dotted ButtonText;
   }
   
   /**
@@ -227,7 +227,7 @@
    */
   
   fieldset {
-    padding: 0.35em 0.75em 0.625em;
+    padding: 0.35 em 0.75 em 0.625 em;
   }
   
   /**
@@ -239,9 +239,9 @@
   
   legend {
     box-sizing: border-box; /* 1 */
-    color: inherit; /* 2 */
+    color: #960373; /* 2 */
     display: table; /* 1 */
-    max-width: 100%; /* 1 */
+    max-width: 100 %; /* 1 */
     padding: 0; /* 3 */
     white-space: normal; /* 1 */
   }
